--- a/package.json
+++ b/package.json
@@ -1,10 +1,3 @@
-{
-  "name": "myapp",
-  "description": "a really cool app",
-  "version": "1.0.0",
-  "engines": {
-    "node": "v18.13.0",
-    "npm": "9.4.0",
-    "yarn": "1.19.1"
-  }
-}
+"publishConfig": {
+  "registry": "https://npm.pkg.github.com"
+},
